# itpp

./: AUTHORS  ChangeLog  ChangeLog-2006  ChangeLog-2007  INSTALL  Makefile.am  NEWS  TODO  VERSION  configure.ac  configure.ac.in  itpp-config.1.in  itpp.spec.in  itpp.vcproj
config/: acx_blas.m4
doc/: Makefile.am  doxygen_html.cfg.in
doc/local/: authors.doc  index.doc.in  installation.doc  users_guide.doc
doc/tutorial/src/: Makefile.am  mimoconv.cpp  stbicm.cpp
extras/: itload.m  itpp-config.t2t  itsave.m
itpp/: Makefile.am  config_msvc.h  itbase.h  itcomm.h  itconfig.h  itfixed.h  itfixedpoint.h  itmex.h  itoptim.h  itprotocol.h  itsignal.h  itsrccode.h  itstat.h  sources.mk
itpp/base/: array.h  bessel.cpp  bessel.h  binary.cpp  binary.h  binfile.cpp  binfile.h  blas.h  cholesky.cpp  circular_buffer.h  converters.cpp  converters.h  copy_vector.h  det.cpp  det.h  eigen.cpp  eigen.h  elmatfunc.cpp  elmatfunc.h  factory.cpp  factory.h  fastica.cpp  fastica.h  fastmath.cpp  fastmath.h  filter.cpp  filter.h  filter_design.cpp  filter_design.h  freq_filt.cpp  freq_filt.h  gf2mat.cpp  gf2mat.h  help_functions.cpp  help_functions.h  integration.cpp  integration.h  inv.cpp  inv.h  itassert.cpp  (+54 more)
itpp/base/algebra/: cholesky.cpp  cholesky.h  det.cpp  det.h  eigen.cpp  eigen.h  inv.cpp  inv.h  lapack.h  ls_solve.cpp  ls_solve.h  lu.cpp  lu.h  qr.cpp  qr.h  schur.cpp  schur.h  svd.cpp  svd.h
itpp/base/bessel/: airy.cpp  bessel_internal.h  chbevl.cpp  gamma.cpp  hyperg.cpp  i0.cpp  i1.cpp  iv.cpp  jv.cpp  k0.cpp  k1.cpp  kn.cpp  polevl.cpp  struve.cpp
itpp/base/math/: elem_math.cpp  elem_math.h  error.cpp  error.h  integration.cpp  integration.h  log_exp.h  min_max.h  misc.cpp  misc.h  trig_hyp.h
itpp/comm/: bch.cpp  bch.h  channel.cpp  channel.h  channel_code.h  commfunc.cpp  commfunc.h  convcode.cpp  convcode.h  crc.cpp  crc.h  egolay.cpp  egolay.h  error_counters.cpp  error_counters.h  galois.cpp  galois.h  hammcode.cpp  hammcode.h  interleave.cpp  interleave.h  ldpc.cpp  ldpc.h  llr.cpp  llr.h  modulator.cpp  modulator.h  modulator_nd.cpp  modulator_nd.h  ofdm.cpp  ofdm.h  pulse_shape.cpp  pulse_shape.h  punct_convcode.cpp  punct_convcode.h  rec_syst_conv_code.cpp  rec_syst_conv_code.h  reedsolomon.cpp  reedsolomon.h  sequence.cpp  (+7 more)
itpp/fixed/: cfix.cpp  cfix.h  cfixed.cpp  cfixed.h  fix.cpp  fix.h  fix_base.cpp  fix_base.h  fix_factory.cpp  fix_factory.h  fix_functions.cpp  fix_functions.h  fix_operators.cpp  fix_operators.h  fixed.cpp  fixed.h
itpp/fixedpoint/: cfix.cpp  cfix.h  cfixed.cpp  cfixed.h  fix.cpp  fix.h  fix_base.cpp  fix_base.h  fix_factory.cpp  fix_factory.h  fix_functions.cpp  fix_functions.h  fix_operators.cpp  fix_operators.h  fixed.cpp  fixed.h
itpp/optim/: newton_search.cpp  newton_search.h
itpp/protocol/: events.cpp  events.h  front_drop_queue.cpp  front_drop_queue.h  packet.h  packet_channel.cpp  packet_channel.h  packet_generator.cpp  packet_generator.h  selective_repeat.cpp  selective_repeat.h  signals_slots.h  tcp.cpp  tcp.h  tcp_client_server.h
itpp/signal/: fastica.cpp  fastica.h  filter.cpp  filter.h  filter_design.cpp  filter_design.h  freq_filt.cpp  freq_filt.h  poly.cpp  poly.h  resampling.cpp  resampling.h  sigfun.cpp  sigfun.h  source.cpp  source.h  transforms.cpp  transforms.h  window.cpp  window.h
itpp/srccode/: audiofile.cpp  audiofile.h  gmm.cpp  gmm.h  lpcfunc.cpp  lpcfunc.h  pnm.cpp  pnm.h  vq.cpp  vq.h  vqtrain.cpp  vqtrain.h
itpp/stat/: histogram.h  misc_stat.cpp  misc_stat.h  mog_diag.cpp  mog_diag.h  mog_diag_em.cpp  mog_diag_em.h  mog_diag_kmeans.cpp  mog_diag_kmeans.h  mog_generic.cpp  mog_generic.h
m4/: acx_blas.m4
tests/: Makefile.am  array_test.cpp  bch_test.cpp  bch_test.ref  blas_test.cpp  channel_test.cpp  cholesky_test.cpp  commfunc_test.cpp  convcode_test.cpp  demapper_test.cpp  det_test.cpp  eigen_test.cpp  fastica_test.cpp  filter_design_test.cpp  filter_test.cpp  filter_test.ref  fix_test.cpp  freq_filt_test.cpp  galois_test.cpp  gf2mat_test.cpp  histogram_test.cpp  interleaver_test.cpp  inv_test.cpp  itfile_test.cpp  ldpc_test.cpp  llr_test.cpp  ls_solve_test.cpp  lu_test.cpp  mat_test.cpp  mat_test.ref  matfunc_test.cpp  modulator_nd_test.cpp  modulator_test.cpp  modulator_test.ref  newton_search_test.cpp  pam_test.cpp  pam_test.ref  parser_test.cpp  poly_test.cpp  poly_test.ref  (+25 more)
win32/: itpp.vcproj  itpp_acml.vcproj  itpp_mkl.vcproj
